--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -164,9 +164,20 @@ a {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-top: 96px;
+    margin-top: 70px;
 }
 
+.clients .images a {
+    display: flex;
+    align-items: center;
+    height: 91px;
+    padding: 0 42px;
+    border-radius: 12px;
+}
+
+.clients .images a:hover {
+    box-shadow: 0px 10px 20px 0px #0000001a;
+}
 /* ======== Guides ======== */
 .guides {
     margin-top: 40px;
